--- a/templates/index.htm
+++ b/templates/index.htm
@@ -41,7 +41,7 @@
 <div class="media py-2 ">
   <div class="media-body">
     <h5 class="mt-0 mb-1">Science Vs God</h5>
-    Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+    In order to understand the scope of science and religion and what interactions there are between them, we must at least get a rough sense of what science and religion are. After all, “science” and “religion” are not eternally unchanging terms with unambiguous meanings. Indeed, they are terms that were coined recently, with meanings that vary across times and cultures. Before the nineteenth century, the term “religion” was rarely used. For medieval authors, such as Aquinas, the term religio meant piety or worship, and was denied of “religious” systems outside of what he considered orthodoxy (Harrison 2015). The term “religion” obtained its considerably broader current meaning through the works of early anthropologists, such as E.B. Tylor (1871), who systematically used the term for religions across the world.
   </div>
   <img src="/static/4.jpg" class="ml-3" alt="...">
 </div>
