--- a/templates/about.htm
+++ b/templates/about.htm
@@ -11,37 +11,12 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="/static/9.jpg" class="d-block w-100" alt="...">
+        <img src="/static/15.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>Lov Niveria</h5>
           <p>Software Developer</p>
         </div>
-      </div>
-      <div class="carousel-item">
-        <img src="/static/10.jpg" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Lov Niveria</h5>
-          <p>Software Developer</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="..." class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Lov Niveriya</h5>
-          <p>Software Developer</p>
-        </div>
-      </div>
-    </div>
-    <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
-
+    
   <ul class="nav justify-content-center">
     <li class="nav-item">
       <a class="nav-link active" href="https://www.linkedin.com/in/lov-niveria-45086919b/">Linkedin</a>
@@ -62,6 +37,9 @@
       <h1 class="display-4">Programming Languages</h1>
       <p class="lead">Java</p>
       <p>Python</p>
+      <p>c,c++</p>
+      <p>django</p>
+      <p>mysql server</p>
     </div>
   </div>
 
@@ -69,7 +47,9 @@
     <div class="container">
       <h1 class="display-4">Achivement</h1>
       <p class="lead">5 star in problem solving on hackerrank</p>
-      <p>Python</p>
+      <p>Sql and java certified from Ictk,IIT</p>
+      <p>won inter-college cricket tournament</p>
+      <p>COT memer in college events</p>
     </div>
   </div>
 
@@ -77,7 +57,8 @@
     <div class="container">
       <h1 class="display-4">projects</h1>
       <p class="lead">Bug Tracking System</p>
-      <p>Python</p>
+      <p>Tech_blog website with Django</p>
+      <p>deployment of website on heroku server</p>
     </div>
   </div>
 {% endblock body %}
